--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "web:build": "webpack --mode production"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "0.76.0",
-    "react-native-web": "^0.19.13"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "^0.81.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.0-alpha.2",
-    "@react-native-community/cli-platform-android": "15.0.0-alpha.2",
-    "@react-native-community/cli-platform-ios": "15.0.0-alpha.2",
-    "@react-native/babel-preset": "0.76.0",
-    "@react-native/eslint-config": "0.76.0",
-    "@react-native/metro-config": "0.76.0",
-    "@react-native/typescript-config": "0.76.0",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
+    "@react-native-community/cli": "^15.1.0",
+    "@react-native-community/cli-platform-android": "^15.1.0",
+    "@react-native-community/cli-platform-ios": "^15.1.0",
+    "@react-native/babel-preset": "^0.81.0",
+    "@react-native/eslint-config": "^0.81.0",
+    "@react-native/metro-config": "^0.81.0",
+    "@react-native/typescript-config": "^0.81.0",
+    "@types/react": "^19.1.10",
+    "@types/react-test-renderer": "^19.1.0",
     "babel-jest": "^29.6.3",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
@@ -38,7 +38,7 @@
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "^19.1.0",
     "style-loader": "^4.0.0",
     "typescript": "5.0.4",
     "url-loader": "^4.1.1",
